[package]
name = "resin"
edition = "2021"
version = "0.0.1"
description = "A reactive, probabilistic logic programming language using Reactive Circuits."
repository = "https://github.com/simon-kohaut/resin"
keywords = [
  "probabilistic logic",
  "reactive circuits",
]

[build]
rustflags = ["-C", "target-cpu=native"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
rclrs = "*"
std_msgs = "*"
plotly = "*"
ndarray = "0.14"
ndarray-rand = "*"
ndarray-npy = "*"
ndarray-linalg = { version = "0.13", features = ["openblas-system"] }
clippy = "*"
itertools = "*"
nom = "*"
regex = "*"
lazy_static = "*"
rand = "0.8.5"
linfa = "0.4"
linfa-nn = "0.5"
linfa-clustering = "0.4"
linfa-datasets = { version = "0.4", features = ["iris"] }
rand_xoshiro = "*"
approx = "*"
clingo = { version = "0.7.2", features = ["derive"] }
clap = { version = "4.4.1", features = ["derive"] }
rayon = "*"
chashmap = "*"
atomic_float = "*"
rand_distr = "*"
cpu-time = "*"
rand_chacha = "*"
