[package]
name = "resin"
edition = "2021"
version = "0.0.1"
description = "A reactive, probabilistic logic programming language using Reactive Circuits."
repository = "https://github.com/simon-kohaut/resin"
keywords = [
  "probabilistic logic",
  "reactive circuits",
]

[build]
rustflags = ["-C", "target-cpu=native"]

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 3
# lto = "fat"
# codegen-units = 1
# panic = "abort"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
petgraph = "*"
plotly = "*"
ndarray = "0.17.0"
ndarray-rand = "0.16.0"
ndarray-npy = "*"
nalgebra = "0.34.0"
clippy = "*"
itertools = "*"
nom = "*"
regex = "*"
rand = "*"
lazy_static = "*"
linfa = "0.4"
linfa-nn = "0.5"
linfa-clustering = "0.4"
linfa-datasets = { version = "0.4", features = ["iris"] }
rand_xoshiro = "*"
approx = "*"
clingo = { version = "0.7.2", features = ["derive", "static-linking"] }
clap = { version = "4.4.1", features = ["derive"] }
rayon = "*"
chashmap = "*"
atomic_float = "*"
rand_distr = "*"
cpu-time = "*"
rand_chacha = "*"
polars = { version = "*", features = ["rows"] }
tempfile = "*"
