<package format="3">
  <name>resin</name>
  <version>0.0.0</version>
  <description>The Resin probabilistic logic programming language using Reactive Circuits.</description>
  <maintainer email="first.second@institution">First Second</maintainer>
  <license>The License</license>

  <depend>rclrs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
